# xcbridge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/xcbridge/: README.md  package.json  postinstall.js
npm/xcbridge-darwin-arm64/: README.md  package.json
npm/xcbridge-darwin-x64/: README.md  package.json
scripts/: install.sh  uninstall.sh
src/: config.rs  error.rs  main.rs  state.rs
src/handlers/: build.rs  device.rs  mod.rs  simulator.rs  status.rs  test.rs
src/models/: mod.rs  requests.rs  responses.rs
src/xcode/: devicectl.rs  mod.rs  simctl.rs  xcodebuild.rs
