[package]
name = "xcbridge"
version = "0.1.0"
edition = "2021"
description = "Xcode bridge service for containerized iOS development"
license = "Apache-2.0"
repository = "https://github.com/Aptove/xcbridge"
keywords = ["xcode", "ios", "development", "bridge", "container"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
tokio-stream = "0.1"
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
